adapt Lobby to new structure