@@ -1,31 +1,26 @@
 package at.aau.serg.websocketdemoserver.service;
 
-import at.aau.serg.websocketdemoserver.model.Player;
-import org.json.JSONArray;
-import org.json.JSONObject;
+import at.aau.serg.websocketdemoserver.model.gamestate.Player;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import java.util.concurrent.atomic.AtomicInteger;
 
 public class Lobby {
     private final List<Player> players = new ArrayList<>();
 
-    public synchronized Player addPlayer(String username) {
+    public synchronized Player addPlayer(String nickname) {
         for (Player p : players) {
-            if (p.getUsername().equalsIgnoreCase(username)) {
-                return p; // Spieler existiert schon
+            if (p.getNickname().equalsIgnoreCase(nickname)) {
+                return p; // Spieler existiert bereits
             }
         }
-        Player player = new Player(username);
-        players.add(player);
-        return player;
+        Player newPlayer = new Player(nickname);
+        players.add(newPlayer);
+        return newPlayer;
     }
 
-
     public synchronized List<Player> getPlayers() {
-        return Collections.unmodifiableList(players);
+        return List.copyOf(players);
     }
 
     public synchronized boolean isReadyToStart() {
